cabal-version:   3.0
name:            CombinatorPrinter
version:         0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

license:
author:          Nathaniel Burke
maintainer:      nathanielrburke3@gmail.com

-- A copyright notice.
-- copyright:

build-type:      Simple
extra-doc-files: CHANGELOG.md

-- Extra source files to be distributed with the package, such as examples, or a tutorial module.
-- extra-source-files:

common warnings
  ghc-options: -Wall

library
  import:           warnings
  exposed-modules:
    CombinatorPrinter
    ShowInstance

  -- Modules included in this library but not exported.
  -- other-modules:

  build-depends:
    , base  >=4.18.0.0
    , mtl   >=2.2.2

  hs-source-dirs:   src
  default-language: GHC2021
